# ROS2_camnode_controller_interface

./: README.md
ros2_ws/: Dockerfile  docker-compose.yml
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/camera_click_teleop/lib/camera_click_teleop/: click_teleop_node
ros2_ws/install/camera_click_teleop/share/camera_click_teleop/: package.bash  package.dsv  package.ps1  package.sh
ros2_ws/install/robot_control_interface/lib/robot_control_interface/: camera_control_node
ros2_ws/install/robot_control_interface/share/robot_control_interface/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/src/camera_click_teleop/: setup.cfg  setup.py
ros2_ws/src/camera_click_teleop/camera_click_teleop/: aruco_teleop_node.py  click_teleop_node.py  turtle_rviz_node.py
ros2_ws/src/camera_click_teleop/launch/: aruco_teleop.launch.py  click_teleop_with_v4l2.launch.py
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/robot_control_interface/: dockerfile  package.xml  setup.py
ros2_ws/src/robot_control_interface/config/: generate_aruco.py
ros2_ws/src/robot_control_interface/docker/: docker-compose.yml
ros2_ws/src/robot_control_interface/launch/: basic_turtlebot.launch.py  ur5_aruco.launch.py
ros2_ws/src/robot_control_interface/robot_control_interface/nodes/: camera_control_node.py
ros2_ws/src/robot_control_interface/scripts/: entrypoint.sh  install_dependencies.sh  setup_workspace.sh
(+5 files in other folders)
