<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schemaVersion="3.0"?>
<package format="3">
  <name>robot_control_interface</name>
  <version>0.1.0</version>
  <description>ROS2 interface for robot control using camera input and ArUco markers</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>ur_simulation_gazebo</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
